# EZ_MultiPlanarUVW

./: .gitignore  CMakeLists.txt  README.md
scripts/: EZ_AOCombine_Test.ms  EZ_Apply.ms  EZ_BoxTri_TestMats.ms  EZ_Smooth_Test.ms  EZ_TestScene.ms
src/: EZMultiPlanarUVW.cpp  EZMultiPlanarUVW.rc  EZ_AO.cpp  EZ_AOLite.cpp  EZ_BoxTri.cpp  EZ_BoxTri.rc  EZ_Masks.cpp  EZ_Smooth.cpp  resource.h
